    + 50_examples-use-gnuclient: Use gnuclient instead of the deprecated
      gnudoit in the info-emacs-* examples (closes: #416431)

  * debian/patches/50_invalid_indexes.dpatch: Removed the useless creation
    of liboctave/Array.cc.orig

  * debian/in/PACKAGE.lintian: Added override for Lintian warning regarding
    m/miscellaneous/license.m being an extra-license-file

 --

octave2.9 (2.9.10-1) experimental; urgency=low

  * New upstream release:
    + The emacs/octave-inf.el file correctly calls the pwd command
      (closes: #416048).
    + debian/patches/50_glpk-pre-ifdef-logic.dpatch: Fixed #ifdef logic
      around macro GLPK_PRE_4_14, which was causing an extra closing brace
      to be introduced for the extern "C"  declaration when GLPK_PRE_4_14
      was not defined.  This patch has been sent to bug@octave.org.
    + debian/patches/50_syscalls-test-sleep.dpatch: Increase the amount of
      time to sleep, in case of errno == EAGAIN when running the test for
      syscalls.cc ("make check" hangs in an unpredictable way without this
      patch)

  * Removed dpatches (applied upstream):
    + 50_mkoctifle-man-indent-option
    + 50_fix_hold_state
    + 50_rename-octave-tags
    + 50_clean-mat-files
    + 50_empty-lhs-sparse
    + 50_plot-doc
    + 50_print-imagemagick-extensions
    + 50_correct_test
    + 50_glpk-api-v4.15
    + 50_parse-inline-brackets
    + 50_sparse_constructors

  * debian/rules:
    + Install emacs/octave-tags* files instead of emacs/otags*
    + Added conf.texi to $(savefiles)
    + Added hack for removing the libcruft/misc/pic directory left after
      "make clean", as well as the libcruft/mkf77def script and the test
      file test/a.wav
    + When building the architecture independent part of the pacakge, call
      make with AWK=gawk, otherwise mawk will be used and the infamous
      error message "program limit exceeded: sprintf buffer size=1020"
      will be issued.

  * debian/in/control: